# scryfallcache

./: .editorconfig  CMakeLists.txt  README.md  sfc-config.cmake
.github/workflows/: cmake.yml
cmake/: sfcConfig.cmake.in
include/: CMakeLists.txt
include/sfc/: sfc.h  sfc_app.h  sfc_base.h  sfc_cache.h  sfc_card.h  sfc_card_array.h  sfc_collector_number.h  sfc_curl.h  sfc_debug.h  sfc_query.h
sfc/: CMakeLists.txt  sfc_app.c  sfc_buffer.c  sfc_buffer.h  sfc_cache.c  sfc_card.c  sfc_card_array.c  sfc_card_map_uint32.c  sfc_card_map_uint32.h  sfc_card_set.c  sfc_card_set.h  sfc_collector_number.c  sfc_collector_number.h  sfc_curl.c  sfc_debug.c  sfc_deserializer.c  sfc_deserializer.h  sfc_file.c  sfc_file.h  sfc_leaky_bucket.c  sfc_leaky_bucket.h  sfc_query.c  sfc_serializer.c  sfc_serializer.h  sfc_string_set.c  sfc_string_set.h
test/: CMakeLists.txt  test.c
